TestRepo2/src/objects/Blitz_History__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Blitz History</relationshipLabel>
        <relationshipName>Blitz_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blitz_Brand__c</fullName>
        <label>Blitz Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Blackhaus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goldschlager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rumple Minze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Blitz_Details__c</fullName>
        <defaultValue>&quot;1. Select Brand&quot; &amp; BR() &amp; &quot;2. Enter Amount in Bottles&quot; &amp; BR() &amp; &quot;3. Click Save &amp; New to add another Brand&quot; &amp; BR() &amp; &quot;4. Click Save when done&quot;</defaultValue>
        <label>Blitz Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Blitz_Program__c</fullName>
        <label>Blitz Program</label>
        <picklist>
            <picklistValues>
                <fullName>Shot Heard Around the World</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Finished__c</fullName>
        <label>Date Finished</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PDF_Link__c</fullName>
        <label>PDF Link</label>
        <type>Url</type>
    </fields>
    <label>Blitz History</label>
    <nameField>
        <displayFormat>BLH-{0000}</displayFormat>
        <label>Blitz History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blitz History</pluralLabel>
    <recordTypes>
        <fullName>Inactive_Blitz</fullName>
        <active>true</active>
        <label>Inactive Blitz</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>